--- a/.github/workflows/digital-ocean-deploy.yml
+++ b/.github/workflows/digital-ocean-deploy.yml
@@ -1,20 +1,12 @@
-name: Reusable Digital Ocean Deploy Workflow
+name: Digital Ocean Deploy Workflow
 
 on:
   workflow_call:
     inputs:
-      node-version:
-        required: false
-        type: string
-        default: '20'
       source-path:
         required: false
         type: string
         default: 'dist/'
-      build-command:
-        required: false
-        type: string
-        default: 'npm run build'
     secrets:
       DO_HOST:
         required: true
@@ -31,25 +23,6 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ inputs.node-version }}
-    
-    - name: Cache Node.js modules
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build
-      run: ${{ inputs.build-command }}
     
     - name: Deploy to Digital Ocean
       uses: appleboy/scp-action@master
