--- a/.github/workflows/node-test.yml
+++ b/.github/workflows/node-test.yml
@@ -1,4 +1,4 @@
-name: Reusable Next.js Test Workflow
+name: Node Test Workflow
 
 on:
   workflow_call:
@@ -11,6 +11,18 @@ on:
         required: false
         type: string
         default: 'npm test'
+      use-build-artifacts:
+        required: false
+        type: boolean
+        default: false
+      artifact-name:
+        required: false
+        type: string
+        default: 'build-output'
+      artifact-path:
+        required: false
+        type: string
+        default: 'dist/'
 
 jobs:
   test:
@@ -40,6 +52,13 @@ jobs:
         key: ${{ runner.os }}-nextjs-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
         restore-keys: |
           ${{ runner.os }}-nextjs-
+    
+    - name: Download build artifacts
+      if: ${{ inputs.use-build-artifacts }}
+      uses: actions/download-artifact@v3
+      with:
+        name: ${{ inputs.artifact-name }}
+        path: ${{ inputs.artifact-path }}
     
     - name: Install dependencies
       run: npm ci
