--- a/.github/workflows/digital-ocean-deploy.yml
+++ b/.github/workflows/digital-ocean-deploy.yml
@@ -7,6 +7,10 @@ on:
         required: false
         type: string
         default: 'dist/'
+      artifact-name:
+        required: false
+        type: string
+        default: 'build-output'
     secrets:
       DO_HOST:
         required: true
@@ -23,6 +27,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ inputs.artifact-name }}
+        path: ${{ inputs.source-path }}
     
     - name: Deploy to Digital Ocean
       uses: appleboy/scp-action@master
