--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -65,9 +65,14 @@ jobs:
         if [ -f .babelrc.backup ]; then mv .babelrc.backup .babelrc; fi
         if [ -f babel.config.js.backup ]; then mv babel.config.js.backup babel.config.js; fi
       
+    - name: Ensure artifact directory exists
+      if: ${{ inputs.upload-artifacts }}
+      run: mkdir -p ${{ inputs.artifact-path }}
+
     - name: Upload build artifacts
       if: ${{ inputs.upload-artifacts }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifact-name }}
         path: ${{ inputs.artifact-path }}
+        if-no-files-found: error
